--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "minimonk",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "A tiny wrapper around monk",
   "main": "lib/minimonk.js",
   "types": "lib/minimonk.d.ts",
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@types/mongodb": "^3.3.15",
-    "monk": "^7.1.2",
+    "monk": "6.0.6",
     "typescript": "^3.7.5"
   }
 }
